<resources>
    <string name="app_name">Tarefa5_14102025</string>
    <string name="planeta">Planeta</string>
    <string name="terra">Terra</string>
    <string name="gravidade_terra">Gravidade: 9,8 m/s²</string>
    <string name="digite_seu_peso">Digite seu peso:</string>
    <string name="peso">Peso</string>
    <string name="calcular_peso">Calcular peso</string>
    <string name="planetas">Planetas</string>
    <string name="sol">Sol</string>
    <string name="lua">Lua</string>
    <string name="temperatura_media_sol">Temperatura Média: 5.772 K</string>
    <string name="distancia_sol_terra">Distância: 149,6 milhões de quilômetros</string>
    <string name="temperatura_media_lua">Temperatura Média: -184 A 214 °C</string>
    <string name="distancia_lua_terra">Distância: 384.400 km</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="nome">Nome</string>
</resources>